--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>React Slingshot</title>
-    <link rel="shortcut icon" href="favicon.ico">
+    <title>Auth0 + React + Redux + Webtask</title>
   </head>
   <body>
     <div id="app"></div>
